# fiocca

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  fiocca.cpp  numeric_integral.hpp  point.hpp
example/: edist.cpp
example/view/: cartesian_product.cpp  view_ext.cpp
include/: expected_dist.hpp  numeric_integral.hpp  point.hpp  rect.hpp  utility.hpp
include/view/: README.md  cartesian_product.hpp  cycle.hpp  ext.hpp  views.hpp  zigzag.hpp  zip.hpp
src/: expected_dist.cpp
